# Roomio

./: .gitignore  DEPLOYMENT_CHECKLIST.md  README.md
backend/: .env.example  Dockerfile  VALIDATION_CHECKLIST.md  migrate.py  pyproject.toml
backend/.claude/agent-memory/fastapi-backend-judge/: MEMORY.md  project_architecture.md
backend/.claude/agents/: fastapi-backend-judge.md
backend/src/: config.py  di.py  logging_config.py  main.py  models.py
backend/src/auth/: dependencies.py
backend/src/common/database/: base_models.py  connection.py  repository.py  unit_of_work.py
backend/src/errors/: base.py  handlers.py  models.py
backend/src/feedback/: models.py  router.py
backend/src/listings/: errors.py  models.py  repositories.py  router.py  service.py
backend/src/listings/database/: orm_models.py  unit_of_work.py
backend/src/messages/: errors.py  models.py  repositories.py  router.py  service.py  websocket.py
backend/src/messages/database/: orm_models.py  unit_of_work.py  (+1 more)
backend/src/migration/: router.py  service.py
backend/src/moderation/: errors.py  models.py  repositories.py  router.py  service.py
backend/src/payments/: models.py  router.py  service.py
backend/src/phone_verification/: errors.py  models.py  repositories.py  router.py  service.py
backend/src/profile/: errors.py  models.py  repositories.py  router.py  service.py
backend/src/routes/: geocode.py  health.py  me.py
backend/src/saved/: errors.py  models.py  repositories.py  router.py  service.py
backend/src/settings/: errors.py  models.py  repositories.py  router.py  service.py
(+101 files in other folders)
