[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "clerk-backend-api>=5.0.6",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = [
    "UP046",  # Generic[T] syntax — matches class-reference.py architecture
]

[tool.ruff.lint.isort]
# Our `profile` package shadows Python's stdlib `profile` module.
# Without this, isort treats it as stdlib and sorts it before `typing`.
known-first-party = ["profile"]
